--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div class="flex-grid">
+        <div>col 1</div>
+        <div>col 2</div>
+        <div>col 3</div>
+    </div>
     <script src="scripts/script.js"></script>
 </body>
 </html>
