add img and caption plus style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="flex-grid">
-        <div>col 1</div>
+        <div><img src="forest.jpeg" alt="Beautiful tree image"><p class="caption">Enjoy the beauty of nature</p></div>
         <div>col 2</div>
         <div>col 3</div>
     </div>
