add col 2 content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 <body>
     <div class="flex-grid">
         <div><img src="forest.jpeg" alt="Beautiful tree image"><p class="caption">Enjoy the beauty of nature</p></div>
-        <div>col 2</div>
+        <div><h2>Welcome to your premier destination for self re-alignment!</h2>
+            <p>You have found potentially the most life-changing/ soul-mending retreat experience you will ever experience. Our nature retreat offers beauty and serenity the likes of which you have never imagined. After our three day program, you will be ready to face the world with renewed hope and a revitalized perspective.</p>
+            <p>Here's what people are saying: 
+                <blockquote>
+                    "Nature's Retreat removed the anxiety from my life and lead to a promotion at work!"
+                    <footer>- Jane Skirmish</footer>
+                </blockquote>
+                <blockquote>
+                    "I've been reborn with self awareness and am ready to take on the world!"
+                    <footer>- Mike Goose</footer>
+                </blockquote>
+            </p>
+        </div>
         <div>col 3</div>
     </div>
     <script src="scripts/script.js"></script>
