add faq section with JS for folding

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <div class="flex-grid">
-        <div class="col"><img src="forest.jpeg" alt="Beautiful tree image"><p class="caption">Enjoy the beauty of nature</p></div>
+        <div class="col">
+            <div>
+                <img src="forest.jpeg" alt="Beautiful tree image">
+            </div>
+            <div>
+                <p class="caption">Enjoy the beauty of nature</p>
+            </div>
+        </div>
         <div class="col"><h2>Welcome to your premier destination for self re-alignment!</h2>
             <p>You have found potentially the most life-changing/ soul-mending retreat experience you will ever experience. Our nature retreat offers beauty and serenity the likes of which you have never imagined. After our three day program, you will be ready to face the world with renewed hope and a revitalized perspective.</p>
             <p>Here's what people are saying: 
@@ -33,8 +40,23 @@
                     <input type="submit" value="Submit">
                 </form>
             </div>
+            <div>
+                <h3>Got Questions?</h3>
+                <button class="faq-fold">How much does it cost?</button>
+                <div class="fold">
+                    <p>You will be surprised by how inexpensive our 3-day retreat programs really are! Please call today for a quote.</p>
+                </div>
+                <button class="faq-fold">Can I bring my significant other?</button>
+                <div class="fold">
+                    <p>We strongly discourage bringing anyone else along on your retreat experience. It's a time to get in touch with your inner-self.</p>
+                </div>
+                <button class="faq-fold">What kind of clothing is required at the retreat facility?</button>
+                <div class="fold">
+                    <p>Although dress clothing makes us feel great sometimes, we discourage bringing anything other than your arrival and departure outfits. You won't need anything inbetween.</p>
+                </div>
+            </div>
         </div>
     </div>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/scripts.js"></script>
 </body>
 </html>
