refactored content to fit wireframe parameters

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Class Exercise</title>
+    <title>Nature's Retreat</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -14,21 +14,25 @@
                 <img src="forest.jpeg" alt="Beautiful tree image">
             </div>
             <div>
-                <p class="caption">Enjoy the beauty of nature</p>
+                <h3>Welcome to your premier destination for self re-alignment!</h3>
+                <p class="caption">You have found potentially the most life-changing/ soul-mending retreat experience you will ever experience. Our nature retreat offers beauty and serenity the likes of which you have never imagined. After our three day program, you will be ready to face the world with renewed hope and a revitalized perspective.</p>
             </div>
         </div>
-        <div class="col"><h2>Welcome to your premier destination for self re-alignment!</h2>
-            <p>You have found potentially the most life-changing/ soul-mending retreat experience you will ever experience. Our nature retreat offers beauty and serenity the likes of which you have never imagined. After our three day program, you will be ready to face the world with renewed hope and a revitalized perspective.</p>
-            <p>Here's what people are saying: 
+        <div class="col">
+            <h3>Lives are being changed:</h3>
+            <div>
                 <blockquote>
-                    "Nature's Retreat removed the anxiety from my life and lead to a promotion at work!"
+                    "Nature's Retreat removed the anxiety from my life and lead to a promotion at work! My boss was convinced that aliens took over my body or that a mad scientits switched out my brain. My partner says I've never been so energetic in my entire life!"
                     <footer>- Jane Skirmish</footer>
                 </blockquote>
+            </div>
+            <h3>Here's another success story:</h3>
+            <div>
                 <blockquote>
-                    "I've been reborn with self awareness and am ready to take on the world!"
+                    "I've been reborn with self awareness and am ready to take on the world! I've be so recharged since the retreat that I've mastered five different ancient fighting styles. I'm literally ready to take on the world!"
                     <footer>- Mike Goose</footer>
                 </blockquote>
-            </p>
+            </div>
         </div>
         <div class="col">
             <div><h3>Reserve your spot in our next session:</h3></div>
