add nav with hover

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <ul>
+        <li class="company">Nature's Retreat</li>
+        <li><a href="#Products">Products</a></li>
+        <li><a class="active" href="#Home">Home</a></li>
+    </ul>
     <div class="flex-grid">
         <div class="col">
             <div>
